[package]
name = "exp2p"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "exp2p"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
qp2p = {git = "https://github.com/SoCal-Software-Labs/qp2p", rev = "861a8cfaebd086f8100c06fc285abdbedc5f52a9"}
bytes = "1.1.0"
futures = "0.3.21"
tokio = {version = "1.17.0", features = ["full"]}
rustler = "0.23.0"


